<resources>
    <string name="app_name">first test</string>

    <string name="Firstname">Firstname:</string>
    <string name="Lastname">Lastname:</string>
    <string name="registration_button">Register</string>
    <string name="email_address">Email</string>
    <string name="emailaddress_A">" "</string>
    <string name="lastnmae_A">" "</string>
    <string name="First_name">" "</string>
    <string name="login_firstname">Firstname</string>
    <string name="lastname_login">Lastname</string>
    <string name="Firstname_login_A"></string>
    <string name="lastname_login_A"></string>
    <string name="Password">Password:</string>
    <string name="Password_A"></string>
    <string name="login_b">Login</string>
    <string name="register_b_l">To Registration</string>
</resources>